--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "pg": "^8.11.5"
+    "java-ast": "^0.3.0",
+    "pg": "^8.11.5",
+    "uuid": "^9.0.1"
   }
 }
